# illuminate-semantic-layer-prototype

./: .gitignore  LICENSE  Makefile  README.md  THOUGHTS.md  pyproject.toml
canonical/: entities.yaml  glossary.yaml  metrics.yaml
data/: generate.py
demo/: scenarios.yaml
docs/superpowers/plans/: 2026-05-21-illuminate-semantic-layer-prototype.md
illuminate-migration/: README.md
illuminate-migration/canonical/: glossary.yaml  metrics.yaml
semantic_layer/: __init__.py  api.py  cli.py  engine.py  models.py  orchestrator.py  telemetry.py  warehouse.py
semantic_layer/prompts/: narrate.md  plan.md
tenants/lone-star/: glossary.yaml  overlay.yaml  tenant.yaml
tenants/midwest-state/: glossary.yaml  overlay.yaml  tenant.yaml
tests/: test_api.py  test_engine.py  test_orchestrator.py  test_overlay_merge.py  test_sql_compile.py  test_telemetry.py  test_warehouse_schema.py
ui/: index.html
