[project]
name = "illuminate-semantic-layer-prototype"
version = "0.1.0"
description = "Two-tier AI semantic layer prototype for higher-ed analytics (canonical + per-institution overlay)."
requires-python = ">=3.12,<3.13"
dependencies = [
    "duckdb>=1.1.0",
    "pydantic>=2.8.0",
    "pyyaml>=6.0.2",
    "jinja2>=3.1.4",
    "sqlglot>=25.0.0",
    "anthropic>=0.40.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "faker>=30.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.6.0",
]

[project.scripts]
semantic-layer = "semantic_layer.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["semantic_layer"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
